<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/s_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/b_icon"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/p_icon"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/i_icon"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/v_icon"
            android:title="@string/account"/>
    </group>
</menu>